--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     />
     <title>Netflix</title>
   </head>
+  <p>Hi Lekha</p>
   <body style="margin: 0">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
