--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
-    <title>Netflix-V2</title>
+    <title>Netflix</title>
   </head>
-  <p style="color: blue">Hi Lekha</p>
   <body style="margin: 0">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
